<resources>
    <string name="app_name">Razvii_project1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="winner_list">Show winner list</string>
    <string name="checkbox_text_q">Save the result of this game?</string>
    <string name="rv_text_list_winners">%1$s \nTotal winning games — %2$d</string>
    <string name="time_left">Time left:</string>
    <string name="content_description_plus_1_for_first_command">Plus 1 for first command</string>
    <string name="content_description_minus_1_for_first_command">Minus 1 for first command</string>
    <string name="cancel_game">Cancel Game</string>
    <string name="zeros_string">00</string>
    <string name="set_game_time">Set game time</string>
    <string name="start">Start</string>
    <string name="empty_rv_list">Winner list are empty</string>
    <string name="hint_edit_text_team1">Name of the first team</string>
    <string name="hint_edit_text_team2">Name of the second team</string>
    <string name="game_time">Game time:</string>
    <string name="winner_image">Winner image</string>
    <string name="share_result">Share result</string>
    <string name="close">Close</string>

</resources>