<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/linear_layout_margin"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_NameFirstTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Name of the first team"
        android:hint="@string/hint_edit_text_team1"
        android:inputType="textCapWords"
        android:lines="1"
        android:maxLength="25"
        android:maxLines="1" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_NameSecondTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Name of the first team"
        android:hint="@string/hint_edit_text_team2"
        android:inputType="textCapWords"
        android:lines="1"
        android:maxLength="25"
        android:maxLines="1" />


    <Button
        android:id="@+id/btnSetupTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/set_game_time"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/tvGameTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/view_margin"
        android:gravity="center"
        android:text="@string/game_time"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_main_text"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:enabled="false"
        android:text="@string/start" />


</LinearLayout>